# dao

./: .metahash  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  crates.js  help.html  index.html  meta.txt  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
dao/: all.html  index.html  sidebar-items.js
dao/contract/: constant.BASE_PERCENT.html  index.html  sidebar-items.js  struct.Dao.html
dao/ft_messages/: fn.transfer_tokens.html  index.html  sidebar-items.js
dao/utils/: index.html
dao_io/: all.html  enum.DaoAction.html  enum.DaoEvent.html  enum.Vote.html  index.html  sidebar-items.js  struct.DaoMetadata.html  struct.DaoState.html  struct.InitDao.html  struct.Member.html  struct.Proposal.html
dao_state/: all.html  index.html
dao_state/metafns/: fn.get_member_info.html  fn.get_proposal_id.html  fn.get_proposal_info.html  fn.is_in_whitelist.html  fn.is_member.html  index.html  sidebar-items.js  type.State.html
implementors/core/clone/: trait.Clone.js
implementors/gmeta/: trait.Metadata.js
implementors/scale_info/: trait.TypeInfo.js
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  ft_messages.rs  lib.rs  utils.rs
src/dao/: contract.rs.html  ft_messages.rs.html  lib.rs.html  utils.rs.html
src/dao_io/: lib.rs.html
src/dao_state/: lib.rs.html
state/: Cargo.toml
tests/: dao_simple_test.rs  dilution_bound_gclient.rs  failures.rs  funging_proposals.rs  membership_proposals.rs  proposals.rs  proposals_gclient.rs  utils.rs  utils_gclient.rs
tests/utils/: mod.rs
tests/utils_gclient/: mod.rs
(+12 files in other folders)
