[package]
name = "dao"
version = "0.2.1"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.3" }
ft-logic-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.3" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
scale-info = { version = "2.3.0", default-features = false }

[dev-dependencies]
gclient = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
tokio = { version = "1.23.0", features = ["full"] }
blake2-rfc = { version = "0.2.18", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[patch.crates-io]
sp-core = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sp-runtime = { git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }